# projeto_nisa

./: app.py  main.py  pyproject.toml  requirements.txt
api/: main.py
api/db/: connection.py  queries.py
api/routers/: animais.py  coleta.py  parasitas.py  pesos.py  reatividade.py
dash_app/: app.py
dash_app/assets/: style.css
db/: connection.py  queries.py
tables/: nisa_coleta.csv  nisa_medidas_lineares.csv  nisa_parasita.csv  nisa_pesagem.csv  nisa_reatividade.csv  nisa_registro_animais.csv
